# marty_svg

./: CMakeLists.txt  enums.h  marty_svg.h
_generators/: RoundRectFlags.txt  _generate_all.bat  umba-enum-gen-options.txt
